gateway-api/kube/analytic.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytic
spec:
  selector:
    app: analytic
  ports:
    - port: 80
      targetPort: 3001
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytic
  template:
    metadata:
      labels:
        app: analytic
    spec:
      containers:
        - name: analytic
          image: idboubacar/challenge-semestre2-analytic-api:latest
          ports:
            - containerPort: 3001
          imagePullPolicy: Always
