gateway-api/kube/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    name: gateway
    app: gateway
spec:
  type: LoadBalancer
  ports:
    - port: 7070
      targetPort: 80
  selector:
    app: gateway
    
---
apiVersion: apps/v1

kind: Deployment

metadata:
  name: gateway

  labels:
    app: gateway

spec:
  replicas: 3

  selector:
    matchLabels:
      app: gateway

  template:
    metadata:
      labels:
        app: gateway

    spec:
      containers:
      - name: gateway

        image: idboubacar/challenge-semestre2-gateway-api:latest
        ports:
          - containerPort: 80
