gateway-api/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    name: api-ingress
spec:
  rules:
  - host: api.local
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: gateway
            port: 
              number: 3000
